@@ -18,9 +18,16 @@
  */
 package org.apache.struts2.components;
 
-import com.opensymphony.xwork2.inject.Inject;
-import com.opensymphony.xwork2.util.ValueStack;
-
+import org.apache.struts2.inject.Inject;
+import org.apache.struts2.util.ValueStack;
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletOutputStream;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.WriteListener;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponseWrapper;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.struts2.RequestUtils;
@@ -30,18 +37,18 @@ import org.apache.struts2.util.FastByteArrayOutputStream;
 import org.apache.struts2.views.annotations.StrutsTag;
 import org.apache.struts2.views.annotations.StrutsTagAttribute;
 
-import javax.servlet.RequestDispatcher;
-import javax.servlet.ServletException;
-import javax.servlet.ServletOutputStream;
-import javax.servlet.ServletRequest;
-import javax.servlet.WriteListener;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpServletResponseWrapper;
-
-import java.io.*;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.io.Writer;
 import java.net.URLEncoder;
-import java.util.*;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Stack;
+import java.util.StringTokenizer;
 
 /**
  * <!-- START SNIPPET: javadoc -->
@@ -94,11 +101,11 @@ public class Include extends Component {
 
     private static final Logger LOG = LogManager.getLogger(Include.class);
 
-    private static final String systemEncoding = System.getProperty("file.encoding");
+    private static final String SYSTEM_ENCODING = Charset.defaultCharset().displayName();
 
     protected String value;
-    private HttpServletRequest req;
-    private HttpServletResponse res;
+    private final HttpServletRequest req;
+    private final HttpServletResponse res;
     private String defaultEncoding;       // Made non-static (during WW-4971 fix)
     private boolean useResponseEncoding = true;  // Added with WW-4971 fix (allows switch between usage of response or default encoding)
 
@@ -125,7 +132,7 @@ public class Include extends Component {
 
         if (useResponseEncoding) {
             encodingForInclude = res.getCharacterEncoding();  // Use response (page) encoding
-            if (encodingForInclude == null || encodingForInclude.length() == 0) {
+            if (encodingForInclude == null || encodingForInclude.isEmpty()) {
                 encodingForInclude = defaultEncoding;  // Revert to defaultEncoding when response (page) encoding is invalid
             }
         }
@@ -137,14 +144,13 @@ public class Include extends Component {
         urlBuf.append(page);
 
         // Add request parameters
-        if (attributes.size() > 0) {
+        if (!attributes.isEmpty()) {
             urlBuf.append('?');
 
             String concat = "";
 
             // Set parameters
-            for (Object next : attributes.entrySet()) {
-                Map.Entry entry = (Map.Entry) next;
+            for (Map.Entry<String, Object> entry : attributes.entrySet()) {
                 Object name = entry.getKey();
                 List values = (List) entry.getValue();
 
@@ -153,11 +159,7 @@ public class Include extends Component {
                     urlBuf.append(name);
                     urlBuf.append('=');
 
-                    try {
-                        urlBuf.append(URLEncoder.encode(value.toString(), "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {
-                        LOG.warn("Unable to url-encode {}, it will be ignored", value);
-                    }
+                    urlBuf.append(URLEncoder.encode(value.toString(), StandardCharsets.UTF_8));
 
                     concat = "&";
                 }
@@ -186,11 +188,10 @@ public class Include extends Component {
 
         if (relativePath.startsWith("/")) {
             returnValue = relativePath;
-        } else if (!(request instanceof HttpServletRequest)) {
+        } else if (!(request instanceof HttpServletRequest hrequest)) {
             returnValue = relativePath;
         } else {
-            HttpServletRequest hrequest = (HttpServletRequest) request;
-            String uri = (String) request.getAttribute("javax.servlet.include.servlet_path");
+            String uri = (String) request.getAttribute(RequestDispatcher.INCLUDE_SERVLET_PATH);
 
             if (uri == null) {
                 uri = RequestUtils.getServletPath(hrequest);
@@ -202,7 +203,7 @@ public class Include extends Component {
         // .. is illegal in an absolute path according to the Servlet Spec and will cause
         // known problems on Orion application servers.
         if (returnValue.contains("..")) {
-            Stack stack = new Stack();
+            Stack<String> stack = new Stack<>();
             StringTokenizer pathParts = new StringTokenizer(returnValue.replace('\\', '/'), "/");
 
             while (pathParts.hasMoreTokens()) {
@@ -248,7 +249,7 @@ public class Include extends Component {
     /**
      * Include a resource in a response.
      *
-     * @param relativePath the relative path of the resource to include; resolves to {@link #getContextRelativePath(javax.servlet.ServletRequest,
+     * @param relativePath the relative path of the resource to include; resolves to {@link #getContextRelativePath(jakarta.servlet.ServletRequest,
      *                     String)}
      * @param writer       the Writer to write output to
      * @param request      the current request
@@ -278,7 +279,7 @@ public class Include extends Component {
             pageResponse.getContent().writeTo(writer, encoding);
         } else {
             // Use the platform specific encoding
-            pageResponse.getContent().writeTo(writer, systemEncoding);
+            pageResponse.getContent().writeTo(writer, SYSTEM_ENCODING);
         }
     }
 
@@ -291,7 +292,7 @@ public class Include extends Component {
      */
     static final class PageOutputStream extends ServletOutputStream {
 
-        private FastByteArrayOutputStream buffer;
+        private final FastByteArrayOutputStream buffer;
 
 
         public PageOutputStream() {
@@ -321,22 +322,27 @@ public class Include extends Component {
             return buffer;
         }
 
+        @Override
         public void close() throws IOException {
             buffer.close();
         }
 
+        @Override
         public void flush() throws IOException {
             buffer.flush();
         }
 
+        @Override
         public void write(byte[] b, int o, int l) throws IOException {
             buffer.write(b, o, l);
         }
 
+        @Override
         public void write(int i) throws IOException {
             buffer.write(i);
         }
 
+        @Override
         public void write(byte[] b) throws IOException {
             buffer.write(b);
         }
@@ -363,8 +369,7 @@ public class Include extends Component {
      */
     static final class PageResponse extends HttpServletResponseWrapper {
 
-        protected PrintWriter pagePrintWriter;
-        protected ServletOutputStream outputStream;
+        private PrintWriter pagePrintWriter;
         private PageOutputStream pageOutputStream = null;
 
 
@@ -374,7 +379,6 @@ public class Include extends Component {
         public PageResponse(HttpServletResponse response) {
             super(response);
         }
-
 
         /**
          * Return the content buffered inside the {@link PageOutputStream}.
@@ -397,6 +401,7 @@ public class Include extends Component {
          * Return instance of {@link PageOutputStream}
          * allowing all data written to stream to be stored in temporary buffer.
          */
+        @Override
         public ServletOutputStream getOutputStream() throws IOException {
             if (pageOutputStream == null) {
                 pageOutputStream = new PageOutputStream();
@@ -408,6 +413,7 @@ public class Include extends Component {
         /**
          * Return PrintWriter wrapper around PageOutputStream.
          */
+        @Override
         public PrintWriter getWriter() throws IOException {
             if (pagePrintWriter == null) {
                 pagePrintWriter = new PrintWriter(new OutputStreamWriter(getOutputStream(), getCharacterEncoding()));
