@@ -18,31 +18,28 @@
  */
 package org.apache.struts2.config;
 
+import org.apache.struts2.config.BeanSelectionProvider;
+import org.apache.struts2.config.Configuration;
+import org.apache.struts2.config.ConfigurationException;
+import org.apache.struts2.config.ConfigurationProvider;
+import org.apache.struts2.config.entities.UnknownHandlerConfig;
+import org.apache.struts2.config.impl.LocatableFactory;
+import org.apache.struts2.config.providers.ValueSubstitutor;
+import org.apache.struts2.inject.ContainerBuilder;
+import org.apache.struts2.inject.Inject;
+import org.apache.struts2.util.location.LocatableProperties;
+import org.apache.struts2.util.location.Location;
+import org.apache.struts2.util.location.LocationUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.apache.struts2.config.entities.BeanConfig;
+import org.apache.struts2.config.entities.ConstantConfig;
+
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-
-import com.opensymphony.xwork2.config.BeanSelectionProvider;
-import com.opensymphony.xwork2.util.ClassLoaderUtil;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.struts2.config.entities.BeanConfig;
-import org.apache.struts2.config.entities.BeanSelectionConfig;
-import org.apache.struts2.config.entities.ConstantConfig;
-
-import com.opensymphony.xwork2.config.Configuration;
-import com.opensymphony.xwork2.config.ConfigurationException;
-import com.opensymphony.xwork2.config.ConfigurationProvider;
-import com.opensymphony.xwork2.config.entities.UnknownHandlerConfig;
-import com.opensymphony.xwork2.config.impl.LocatableFactory;
-import com.opensymphony.xwork2.config.providers.ValueSubstitutor;
-import com.opensymphony.xwork2.inject.ContainerBuilder;
-import com.opensymphony.xwork2.inject.Inject;
-import com.opensymphony.xwork2.util.location.LocatableProperties;
-import com.opensymphony.xwork2.util.location.Location;
-import com.opensymphony.xwork2.util.location.LocationUtils;
 
 public class StrutsJavaConfigurationProvider implements ConfigurationProvider {
     private static final Logger LOG = LogManager.getLogger(StrutsJavaConfigurationProvider.class);
@@ -100,9 +97,9 @@ public class StrutsJavaConfigurationProvider implements ConfigurationProvider {
                 LOG.debug("Registering bean selection provider {} of type {}",
                     beanSelectionConfig.getName(), beanSelectionConfig.getClazz().getName());
 
-                BeanSelectionProvider provider = beanSelectionConfig.getClazz().newInstance();
+                BeanSelectionProvider provider = beanSelectionConfig.getClazz().getDeclaredConstructor().newInstance();
                 provider.register(builder, props);
-            } catch (IllegalAccessException | InstantiationException e) {
+            } catch (ReflectiveOperationException e) {
                 throw new ConfigurationException("Unable to load : name:" + beanSelectionConfig.getName()
                     + " class:" + beanSelectionConfig.getClazz().getName());
             }
