@@ -18,17 +18,14 @@
  */
 package org.apache.struts2.factory;
 
-import com.opensymphony.xwork2.ActionProxy;
-import com.opensymphony.xwork2.ActionProxyFactory;
-import com.opensymphony.xwork2.DefaultActionProxyFactory;
-import com.opensymphony.xwork2.inject.Container;
-import com.opensymphony.xwork2.inject.Initializable;
-import com.opensymphony.xwork2.inject.Inject;
+import org.apache.struts2.ActionProxy;
+import org.apache.struts2.ActionProxyFactory;
+import org.apache.struts2.inject.Initializable;
+import org.apache.struts2.inject.Inject;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.struts2.StrutsConstants;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -38,7 +35,7 @@ import java.util.Set;
  * <!-- START SNIPPET: description -->
  * <p>
  * Prefix based factory should be used with {@link org.apache.struts2.dispatcher.mapper.PrefixBasedActionMapper}
- * to use appropriate {@link com.opensymphony.xwork2.ActionProxyFactory} connected with given
+ * to use appropriate {@link org.apache.struts2.ActionProxyFactory} connected with given
  * {@link org.apache.struts2.dispatcher.mapper.ActionMapper}
  * </p>
  *
@@ -63,18 +60,13 @@ public class PrefixBasedActionProxyFactory extends StrutsActionProxyFactory impl
 
     private static final Logger LOG = LogManager.getLogger(PrefixBasedActionProxyFactory.class);
 
-    private Map<String, ActionProxyFactory> actionProxyFactories = new HashMap<>();
+    private final Map<String, ActionProxyFactory> actionProxyFactories = new HashMap<>();
     private Set<String> prefixes = new HashSet<>();
-
-    @Inject
-    public void setContainer(Container container) {
-        this.container = container;
-    }
 
     @Inject(StrutsConstants.PREFIX_BASED_MAPPER_CONFIGURATION)
     public void setPrefixBasedActionProxyFactories(String list) {
         if (list != null) {
-            prefixes = new HashSet<>(Arrays.asList(list.split(",")));
+            prefixes = Set.of(list.split(","));
         }
     }
 
